--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>JUnit</title>
-	<link rel="canonical" href="http://junit.org/junit4/"/>
-  </head>
-  <body>
-<noscript>
-	<meta http-equiv="refresh" content="0;URL=http://junit.org/junit4/">
-</noscript>
-<!--[if lt IE 9]><script type="text/javascript">var IE_fix=true;</script><![endif]-->
-<script type="text/javascript">
-	var url = "http://junit.org/junit4/";
+<head>
+	<meta charset="UTF-8">
+	<title>JUnit</title>
+	<link rel="canonical" href="{{ page.target_url }}"/>
+</head>
+<body>
+	<noscript>
+		<meta http-equiv="refresh" content="0;URL={{ page.target_url }}">
+	</noscript>
+	<!--[if lt IE 9]><script type="text/javascript">var IE_fix=true;</script><![endif]-->
+	<script type="text/javascript">
+	var url = "{{ page.target_url }}";
 	if(typeof IE_fix != "undefined") // IE8 and lower fix to pass the http referer
 	{
 		document.write("redirecting..."); // Don't remove this line or appendChild() will fail because it is called before document.onload to make the redirect as fast as possible. Nobody will see this text, it is only a tech fix.
@@ -21,6 +21,6 @@
 		referLink.click();
 	}
 	else { window.location.replace(url); } // All other browsers
-</script>
-  </body>
+	</script>
+</body>
 </html>
