--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/junit5-logo.png">
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
   <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet">
