--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
-    
+
 @import "bootstrap";
 
 #navbar-main {
@@ -35,4 +35,8 @@
 	margin-bottom: 30px;
 	font-weight: 300;
 	line-height: 120%;
+}
+
+#events dt {
+	margin-top: 7px;
 }
