Add link to JUnit 4 website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,21 @@
 <nav id="navbar-main" class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
       <a class="navbar-brand" href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/img/junit5-logo.png"> {{ site.title }}</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="http://junit.org/junit4/">
+          <i class="fa fa-external-link" aria-hidden="true"></i>
+          JUnit 4
+        </a></li>
+      </ul>
     </div>
   </div>
 </nav>
