--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.3.0/font-mfizz.min.css">
 
   <script defer src="//code.jquery.com/jquery-2.2.3.min.js"></script>
   <script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
