Redirect to HTTPS

--- a/_layouts/junit5_redirect.html
+++ b/_layouts/junit5_redirect.html
@@ -1,2 +1,2 @@
-{% capture target_url %}http://junit.org/junit5{{ page.url }}{% endcapture %}
+{% capture target_url %}https://junit.org/junit5{{ page.url }}{% endcapture %}
 {% include redirect.html %}
