--- a/_layouts/junit4_redirect.html
+++ b/_layouts/junit4_redirect.html
@@ -1,2 +1,2 @@
-{% capture target_url %}http://junit.org/junit4{{ page.url }}{% endcapture %}
+{% capture target_url %}https://junit.org/junit4{{ page.url }}{% endcapture %}
 {% include redirect.html %}
