--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
   <script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script defer type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
   <script defer src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://steadyhq.com/widget_loader/7bc62501-0396-4ad8-974f-797844736877"></script>
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
