Upgrade to Font Awesome 5.3.1

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="http://junit.org/junit4/">
-          <i class="fa fa-external-link" aria-hidden="true"></i>
+          <i class="fas fa-external-link-alt"></i>
           JUnit 4
         </a></li>
       </ul>
