--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -69,3 +69,16 @@ footer {
 	background-color: $jumbotron-bg;
 	color: darken($jumbotron-bg, 25%);
 }
+
+/* Sponsor card styles
+-------------------------------------------------- */
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 200px;
+    border-radius: 5px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
