Fix color names

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -81,7 +81,7 @@ footer {
     text-align: center;
     font-size: small;
     background-color: gold; /* For browsers that do not support gradients */
-    background-image: linear-gradient(to bottom right, goldenrod, god); /* Standard syntax (must be last) */
+    background-image: linear-gradient(to bottom right, gold, white); /* Standard syntax (must be last) */
 }
 
 .card:hover {
