--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -74,7 +74,7 @@ footer {
 -------------------------------------------------- */
 .card {
     width: 240px;
-    height: 340px;
+    height: 300px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
@@ -86,4 +86,28 @@ footer {
 
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card-image {
+    display: block;
+    width: 100%;
+    height: 140px;
+    overflow: hidden;
+    padding: 2px 16px;
+}
+
+.card-center {
+    display: block;
+    width: 100%;
+    height: 120px;
+    overflow: hidden;
+    padding: 2px 16px;
+}
+
+.card-bottom {
+    display: block;
+    width: 100%;
+    height: 40px;
+    overflow: hidden;
+    padding: 2px 16px;
 }
