--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -91,9 +91,9 @@ footer {
 .card-image {
     display: block;
     width: 100%;
-    height: 140px;
+    height: 120px;
+    line-height: 140px;
     overflow: hidden;
-    padding: 2px 16px;
 }
 
 .card-center {
@@ -101,13 +101,12 @@ footer {
     width: 100%;
     height: 120px;
     overflow: hidden;
-    padding: 2px 16px;
 }
 
 .card-bottom {
     display: block;
     width: 100%;
-    height: 40px;
+    height: 60px;
     overflow: hidden;
-    padding: 2px 16px;
+    font-size: x-small;
 }
