--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://junit.org/junit4/">
+        <li><a href="https://junit.org/junit4/">
           <i class="fas fa-external-link-alt"></i>
           JUnit 4
         </a></li>
