Add padding around cards

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -75,6 +75,7 @@ footer {
 .card {
     width: 240px;
     height: 300px;
+    padding: 10px 16px;	
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
