--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -122,8 +122,8 @@ footer {
     border-radius: 5px;
     text-align: center;
     font-size: small;
-    background-color: gold; /* For browsers that do not support gradients */
-    background-image: linear-gradient(to bottom right, gold, white); /* Standard syntax (must be last) */
+    background-color: silver; /* For browsers that do not support gradients */
+    background-image: linear-gradient(to bottom right, silver, white); /* Standard syntax (must be last) */
     cursor: pointer;
 }
 
@@ -163,8 +163,8 @@ footer {
     border-radius: 5px;
     text-align: center;
     font-size: small;
-    background-color: gold; /* For browsers that do not support gradients */
-    background-image: linear-gradient(to bottom right, gold, white); /* Standard syntax (must be last) */
+    background-color: bronze; /* For browsers that do not support gradients */
+    background-image: linear-gradient(to bottom right, bronze, white); /* Standard syntax (must be last) */
     cursor: pointer;
 }
 
