--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -178,6 +178,10 @@ footer {
     height: 80px;
     line-height: 80px;
     overflow: hidden;
+
+    img {
+        width: 80%;
+    }
 }
 
 .cardbronze-center {
